# custom_string

./: .gitignore  README.md  build_nix.sh  build_win32_vs.cmd
src/: CMakeLists.txt  revlex.cpp
src/custom_string/: CMakeLists.txt  custom_string.cpp  custom_string.h
tests/: test.cmd  test.sh  test_data.txt  test_data_1251.txt  test_data_866.txt
